--- a/VencerReserva/Views/EditarEquipamento.xaml
+++ b/VencerReserva/Views/EditarEquipamento.xaml
@@ -2,11 +2,21 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="VencerReserva.Views.EditarEquipamento"
-             Title="EditarEquipamento">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+             Title="Editar Equipamento">
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Salvar" Clicked="ToolbarItem_Clicked" />
+    </ContentPage.ToolbarItems>
+    
+    <VerticalStackLayout Spacing="10" Padding="10">
+        <Label Text="Nome do Equipamento:" />
+        <Entry x:Name="txt_nome" Text="{Binding Equipamento}" />
+
+        <Label Text="Check-IN:" />
+        <DatePicker x:Name="dtpck_checkIn" DateSelected="dtpck_checkIn_DateSelected"
+                    Format="dd/MM/yyyy" />
+
+        <Label Text="Check-IN:" />
+        <DatePicker x:Name="dtpck_checkOut" Format="dd/MM/yyyy" />
     </VerticalStackLayout>
 </ContentPage>
