--- a/VencerReserva/Resources/Styles/Colors.xaml
+++ b/VencerReserva/Resources/Styles/Colors.xaml
@@ -6,9 +6,9 @@
 
     <!-- Note: For Android please see also Platforms\Android\Resources\values\colors.xml -->
 
-    <Color x:Key="back">#2f4f4f</Color>
-    <Color x:Key="Frame">#2b7777</Color>
-    <Color x:Key="Texto">#45d4d9</Color>
+    <Color x:Key="Back">#f8f9fa</Color>
+    <Color x:Key="Texto">#2d4059</Color>
+   
     <Color x:Key="Primary">#512BD4</Color>
     <Color x:Key="PrimaryDark">#ac99ea</Color>
     <Color x:Key="PrimaryDarkText">#242424</Color>
